P02 User AuthN crud (#5)
* PgSQL added, auto-migrations done, user tables added, pg users separated, pg-init added

* Session-based auth done, user credentials patch endpoints done

* Dev requirements removed from docker image, imporoved validation for emails

* pre-commit block commits into main done, readme update, codeowners, checklist added

* fix review checklist

* CI tests fix

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,21 @@
-# Example environment variables
+# Api
 APP_ENV=dev
 LOG_LEVEL=info
+STUDYGROUPD_API_PORT=8000
+STUDYGROUPD_API_TAG=dev
+# Postgres
+# General settings
+PG_HOST=localhost
+PG_PORT=5432
+PG_DB=exmaple_db
+# PG system user - to run init.sql and manage priveleges on startup
+PG_SYS_USER=example_sys_user
+PG_SYS_PSWD=exmaple_sys_password
+# PG migration user - to run migrations
+PG_MIGRATION_USER=example_migration_user
+PG_MIGRATION_PSWD=exmaple_migration_password
+# PG app user - to execute queries on db, unable to manage db schema
+PG_APP_USER=example_app_user
+PG_APP_PSWD=example_app_password
+# PG expose port from docker subnetwork
+PG_EXP_PORT=5435
