--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           isort --check-only .
 
       - name: Tests
-        run: pytest -q
+        run: pytest tests/ -q
 
       - name: Pre-commit (all files)
         run: pre-commit run --all-files
