--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,8 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
+      - id: no-commit-to-branch
+        args: ['--branch', 'main']
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-merge-conflict
