--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,5 @@ jobs:
 
       - name: Pre-commit (all files)
         run: pre-commit run --all-files
+        env:
+          SKIP: no-commit-to-branch
