--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,6 @@
 # Api
 APP_ENV=dev
 LOG_LEVEL=info
-STUDYGROUPD_API_PORT=8000
 STUDYGROUPD_API_TAG=dev
 # Postgres
 # General settings
@@ -19,3 +18,6 @@ PG_APP_USER=example_app_user
 PG_APP_PSWD=example_app_password
 # PG expose port from docker subnetwork
 PG_EXP_PORT=5435
+# Gateway
+SD_AA_GATEWAY_PORT=80
+SECDEV_GA_AUTH_URL=http://host.docker.internal:8000
