--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ combine_as_imports = true
 [tool.black]
 line-length = 100
 target-version = ['py311']
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "session"
