--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,14 @@ services:
     container_name: studygroups-api
     image: hse.devsec.studygroups:${STUDYGROUPD_API_TAG}
     restart: unless-stopped
+
+    # Запрект повышения привелегий и модуль безопасности ядра Limix - AppArmor, блокировка системных вызовов seccomp
+    security_opt:
+      - no-new-privileges:true
+      - apparmor:docker-default
+    # Ограничение возможных прав пользователя внутри контейнера
+    cap_drop:
+      - ALL
     depends_on:
       studygroups_db:
         condition: service_healthy
@@ -16,9 +24,15 @@ services:
       - PYTHONUNBUFFERED=1
     networks:
       - hse-devsec-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
 
   studygroups_db:
-    image: postgres:latest
+    image: postgres:17-alpine
     container_name: studygroups-db
     restart: unless-stopped
     shm_size: 128mb
@@ -34,7 +48,7 @@ services:
     networks:
       - hse-devsec-network
     ports:
-      - ${PG_EXP_PORT}:5432
+      - ${PG_EXP_PORT:-5432}:5432
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "${PG_SYS_USER}", "-d", "${PG_DB}"]
       interval: 10s
@@ -49,7 +63,7 @@ services:
     environment:
       - AUTH_API_URL=${SECDEV_GA_AUTH_URL}
     ports:
-      - ${SD_AA_GATEWAY_PORT}:80
+      - ${SD_AA_GATEWAY_PORT:-80}:80
     networks:
       - hse-devsec-network
 
