--- a/.github/workflows/ci-sbom-sca.yml
+++ b/.github/workflows/ci-sbom-sca.yml
@@ -27,37 +27,37 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create EVIDENCE directory
-        run: mkdir -p EVIDENCE/P09
+        run: mkdir -p EVIDENCE
 
       - name: Generate SBOM (Syft CycloneDX)
         run: |
           docker run --rm -v $PWD:/work -w /work anchore/syft:latest \
-            packages dir:. -o cyclonedx-json > EVIDENCE/P09/sbom.json
+            packages dir:. -o cyclonedx-json > EVIDENCE/sbom.json
 
       - name: SCA Scan (Grype)
         run: |
           set -e
           docker run --rm -v $PWD:/work -w /work anchore/grype:latest \
-            sbom:/work/EVIDENCE/P09/sbom.json -o json > EVIDENCE/P09/sca_report.json
+            sbom:/work/EVIDENCE/sbom.json -o json > EVIDENCE/sca_report.json
 
       - name: Generate SCA Summary
         run: |
-          echo "# SCA Summary (Dependencies)" > EVIDENCE/P09/sca_summary.md
-          echo "" >> EVIDENCE/P09/sca_summary.md
-          echo "Date: $(date)" >> EVIDENCE/P09/sca_summary.md
-          echo "" >> EVIDENCE/P09/sca_summary.md
+          echo "# SCA Summary (Dependencies)" > EVIDENCE/sca_summary.md
+          echo "" >> EVIDENCE/sca_summary.md
+          echo "Date: $(date)" >> EVIDENCE/sca_summary.md
+          echo "" >> EVIDENCE/sca_summary.md
 
-          echo "## Severity Counts" >> EVIDENCE/P09/sca_summary.md
-          echo '```json' >> EVIDENCE/P09/sca_summary.md
+          echo "## Severity Counts" >> EVIDENCE/sca_summary.md
+          echo '```json' >> EVIDENCE/sca_summary.md
           docker run --rm -v $PWD:/work -w /work --entrypoint="" anchore/grype:latest \
             jq '[.matches[].vulnerability.severity] | group_by(.) | map({(.[0]): length}) | add' \
-            EVIDENCE/P09/sca_report.json >> EVIDENCE/P09/sca_summary.md || echo "{}" >> EVIDENCE/P09/sca_summary.md
-          echo '```' >> EVIDENCE/P09/sca_summary.md
+            EVIDENCE/sca_report.json >> EVIDENCE/sca_summary.md || echo "{}" >> EVIDENCE/sca_summary.md
+          echo '```' >> EVIDENCE/sca_summary.md
 
       - name: Upload SBOM & SCA Evidence
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: P09_EVIDENCE
-          path: EVIDENCE/P09/
+          name: EVIDENCE
+          path: EVIDENCE/
           retention-days: 7
