--- a/.github/workflows/ci-sbom-sca.yml
+++ b/.github/workflows/ci-sbom-sca.yml
@@ -58,6 +58,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: EVIDENCE
+          name: EVIDENCE_SBOM_SCA
           path: EVIDENCE/
-          retention-days: 7
+          retention-days: 14
