--- a/.github/workflows/ci-sast-secrets.yml
+++ b/.github/workflows/ci-sast-secrets.yml
@@ -26,25 +26,25 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Ensure evidence dirs
-        run: mkdir -p EVIDENCE
+        run: mkdir -p EVIDENCE/P10
 
       - name: Semgrep CI (SARIF)
         run: |
           docker run --rm -v $PWD:/src returntocorp/semgrep:latest \
             semgrep ci --config p/ci --config /src/security/semgrep/rules.yml \
-              --sarif --output /src/EVIDENCE/semgrep.sarif --metrics=off || true
+              --sarif --output /src/EVIDENCE/P10/semgrep.sarif --metrics=off || true
 
       - name: Gitleaks detect
         run: |
           docker run --rm -v $PWD:/repo zricethezav/gitleaks:latest \
             detect --no-banner --config=/repo/security/.gitleaks.toml \
               --source=/repo --report-format=json \
-              --report-path=/repo/EVIDENCE/gitleaks.json || true
+              --report-path=/repo/EVIDENCE/P10/gitleaks.json || true
 
       - name: Upload SAST & Secrets evidence
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: EVIDENCE_SAST_SEMGREP
-          path: EVIDENCE/
+          path: EVIDENCE/P10
           retention-days: 14
