--- a/security/.gitleaks.toml
+++ b/security/.gitleaks.toml
@@ -11,12 +11,12 @@ description = "Global allowlist for the project"
 paths = [
     '''EVIDENCE/.*''',
     '''reports/.*''',
-    '''test/.*'''
-    '''tests/.*'''
-    '''сonftest.py'''
+    '''test/.*''',
+    '''tests/.*''',
+    '''сonftest.py''',
 ]
 
 # Игнорирование конкретных ложных срабатываний по Regex
 regexes = [
-    '''mock_token_.*'''
+    '''mock_token_.*''',
 ]
